Fixed so loader no longer should be stretched

--- a/src/style/control.css
+++ b/src/style/control.css
@@ -365,6 +365,8 @@ select.rounded:focus {
     border-radius: 50%;
     min-width: 8px;
     min-height: 8px;
+    width: 8px;
+    height: 8px;
     animation: spin 1500ms ease-in-out infinite;
 }
 
